2003-12-27  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* configure.ac: Search for the shmctl() function.  Under current
	Cygwin, this is hiding in -lcygipc.

2003-12-26  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/composite.c: Fixed the composite operator list in the
	CompositeImage documentation.
	* www/api/types.html: Corrected list of composition
	operators. Sometime prior to the creation of GraphicsMagick, the
	"Replace" composite operators were renamed to be "Copy" composite
	operators.  Thanks to David Relson for bringing this problem to
	our attention.
	* PerlMagick/Magick.xs: Added "LAB" to colorspace types.
	* magick/image.h (enum ColorSpace): Add LABColorspace enumeration.
	* wand/magick_wand.h : Add some compatibility definitions to
	translate from ImageMagick enumerations to existing GraphicsMagick
	enumerations.

2003-12-25  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/annotate.c: Use header synonyms defined by FreeType's
	ftheader.h (included via <ft2build.h>) to include FreeType headers.
	This will presumably be more portable in the future.
	* configure.ac: <ft2build.h> is an optional prerequisite for
	<freetype/freetype.h> and <libwmf/ipa.h> so include it when
	testing for these headers.
	* magick/annotate.c: Include <ft2build.h> if it is available.

2003-12-21  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* wand/wandtest.c: Ported from latest ImageMagick version.
	* wand/drawing_wand.c: Adapted to be compatible with latest
	ImageMagick version.
	* wand/pixel_wand.c: Adapted to be compatible with latest
	ImageMagick version.
	* wand/magick_wand.c: Ported from latest ImageMagick version.
	* magick/image.h (Image): Members color_profile, iptc_profile,
	generic_profile, and generic_profiles are now deprecated and
	private although they continue to work as before. Please migrate
	existing code to use the GetImageProfile and SetImageProfile
	functions since these members will eventually be removed.