@@ -1,5 +1,11 @@
 2003-12-27  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
+	* magick/map.c: Added signature members to all structures and
+	added assertions to ensure that the signature == MagickSignature
+	prior to use. MagickMapAllocateObject now initializes the object
+	reference count to one, and MagickMapDestroyObject decrements it
+	in order to be more correct even though the object reference count
+	is not actually used yet.
 	* configure.ac: Search for the shmctl() function.  Under current
 	Cygwin, this is hiding in -lcygipc.
 
